--- a/travelRecommendation.html
+++ b/travelRecommendation.html
@@ -23,6 +23,9 @@
 	<!-- Include your CSS files here -->
 	<link rel="stylesheet" href="css/styles.css">
 
+    <!-- Font Awesome CDN link -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+
 </head>
 
 <body>
@@ -30,19 +33,58 @@
 		<!-- Add your website name or logo here -->
 		<p>Header</p>
 	</header>
-	<nav>
-        <div class="topnav">
-            <a class="active" href="#home">Home</a>
+    <nav class="navbar">
+        <!-- Logo on the left side -->
+        <a href="#" class="logo">
+            <img src="img/TravelPlaneSmall.jpg" alt="Logo" class="logo-img">
+            <a class="logo-link" href="#home">LonTravel</a>
+        </a>
+        
+        <!-- Navigation links centered -->
+        <div class="nav-links">
+            <a href="#home">Home</a>
             <a href="#about">About Us</a>
             <a href="#contact">Contact Us</a>
-            <input type="text" placeholder="Search..">
-            <button name="Search">Reset</button>
-            <button name="Clear">Clear</button>
-          </div>
-	</nav>
+        </div>
+
+        <!-- Search box on the right -->
+        <div class="search-container">
+            <input type="text" placeholder="Search..." id="searchBox">
+            <button id="searchButton">Search</button>
+            <button id="resetButton">Reset</button>
+        </div>
+    </nav>
 	<main>
 		<!-- Add your main content here -->
-		<h1>Heading</h1>
+		<div class="logo-container">
+            <img src="img/homePageBackground.jpg" alt="Logo" class="full-page-logo">
+        </div>
+
+        <div class="social-media">
+            <a href="https://twitter.com" target="_blank" class="social-icon twitter">
+                <i class="fab fa-twitter"></i> <!-- Font Awesome Twitter icon -->
+            </a>
+            <a href="https://facebook.com" target="_blank" class="social-icon facebook">
+                <i class="fab fa-facebook"></i> <!-- Font Awesome Facebook icon -->
+            </a>
+            <a href="https://instagram.com" target="_blank" class="social-icon instagram">
+                <i class="fab fa-instagram"></i> <!-- Font Awesome Instagram icon -->
+            </a>
+            <a href="https://youtube.com" target="_blank" class="social-icon youtube">
+                <i class="fab fa-youtube"></i> <!-- Font Awesome YouTube icon -->
+            </a>
+        </div>
+
+            <div class="explore-section">
+                <h1>EXPLORE DREAM DESTINATION</h1>
+                <p class="description">
+                    it encourages exploration of unfamiliar territories, embracing diverse cultures and landscapes, while pursuing the desired destination that captivates the heart and ignites a sense of wonder.
+                </p>
+                <div class="button-container">
+                    <button class="book-now-btn">BOOK NOW</button>
+                </div>
+            </div>
+    
 	</main>
 	<footer>
 		<!-- Add copyright notices and other footer content here -->
