Modified about page

--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
 
             <!-- Team Section -->
             <div class="team-section">
-                <div class="column">
+                <div class="column" style="width: 10%;">
                     <h2>OUR TEAM</h2>
                 </div>
                 <div class="column">
@@ -122,17 +122,6 @@
                             <div class="team-text">
                                 <p>Emily Johnson<br>Responsible for...</p>
                                 <button class="blue-btn">CFO</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="column">
-                    <div class="team-member">
-                        <div class="team-content">
-                            <img src="img/placeholder-icon.png" alt="Icon" class="team-icon">
-                            <div class="team-text">
-                                <p>Mark Lee<br>Responsible for...</p>
-                                <button class="blue-btn">COO</button>
                             </div>
                         </div>
                     </div>
