Added light bulb in about

--- a/about.html
+++ b/about.html
@@ -96,7 +96,7 @@
                 <div class="column">
                     <div class="team-member">
                         <div class="team-content">
-                            <img src="img/placeholder-icon.png" alt="Icon" class="team-icon">
+                            <img src="img/LightBulb.jpg" alt="Icon" class="team-icon">
                             <div class="team-text">
                                 <p>John Doe<br>Responsible for...</p>
                                 <button class="blue-btn">CEO</button>
@@ -107,7 +107,7 @@
                 <div class="column">
                     <div class="team-member">
                         <div class="team-content">
-                            <img src="img/placeholder-icon.png" alt="Icon" class="team-icon">
+                            <img src="img/LightBulb.jpg" alt="Icon" class="team-icon">
                             <div class="team-text">
                                 <p>Jane Smith<br>Responsible for...</p>
                                 <button class="blue-btn">CTO</button>
@@ -118,7 +118,7 @@
                 <div class="column">
                     <div class="team-member">
                         <div class="team-content">
-                            <img src="img/placeholder-icon.png" alt="Icon" class="team-icon">
+                            <img src="img/LightBulb.jpg" alt="Icon" class="team-icon">
                             <div class="team-text">
                                 <p>Emily Johnson<br>Responsible for...</p>
                                 <button class="blue-btn">CFO</button>
