Updated CSS and HTML for travel Page for green search and reset buttons

--- a/travelRecommendation.html
+++ b/travelRecommendation.html
@@ -49,8 +49,8 @@
 			<!-- Search box on the right -->
 			<div class="search-container">
 				<input type="text" placeholder="Search..." id="searchBox">
-				<button id="searchButton">Search</button>
-				<button id="resetButton">Reset</button>
+				<button id="searchButton" class="searchButton">Search</button>
+				<button id="resetButton" class="resetButton">Reset</button>
 			</div>
 		</nav>
 	</header>
