--- a/travelRecommendation.html
+++ b/travelRecommendation.html
@@ -48,8 +48,9 @@
 
 			<!-- Search box on the right -->
 			<div class="search-container">
-				<input type="text" placeholder="Search..." id="searchBox">
-				<button id="searchButton" class="searchButton">Search</button>
+				<input type="text" placeholder="Search..." id="searchBox">			
+                <button class="searchIconButton"><i class="fas fa-search"></i></button>
+                <button id="searchButton" class="searchButton">Search</button>
 				<button id="resetButton" class="resetButton">Reset</button>
 			</div>
 		</nav>
