--- a/contact.html
+++ b/contact.html
@@ -2,99 +2,104 @@
 <html lang="en">
 
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Travel Recommendation</title>
-	<meta name="description" content="Travel Company that makes Travel Recommendations">
-	<meta name="author" content="TravelBloom">
+    <title>Travel Recommendation</title>
+    <meta name="description" content="Travel Company that makes Travel Recommendations">
+    <meta name="author" content="TravelBloom">
 
-	<!-- Open Graph Protocol -->
-	<meta property="og:title" content="TravelBloom">
-	<meta property="og:type" content="website">
-	<meta property="og:url" content="https://www.mysite">
-	<meta property="og:description" content="Travel Company that makes Travel Recommendations">
-	<meta property="og:image" content="img/travelPlaneSmall.jpg">
+    <!-- Open Graph Protocol -->
+    <meta property="og:title" content="TravelBloom">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.mysite">
+    <meta property="og:description" content="Travel Company that makes Travel Recommendations">
+    <meta property="og:image" content="img/travelPlaneSmall.jpg">
 
-	<link rel="icon" href="/favicon.ico">
-	<link rel="icon" href="/favicon.svg" type="image/svg+xml">
-	<link rel="apple-touch-icon" href="/apple-touch-icon.png">
+    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
-	<!-- Include your CSS files here -->
-	<link rel="stylesheet" href="css/styles.css">
+    <!-- Include your CSS files here -->
+    <link rel="stylesheet" href="css/styles.css">
 
-	<!-- Font Awesome CDN link -->
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <!-- Font Awesome CDN link -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 
 </head>
 
 <body>
-	<header>
-		<nav class="navbar">
-			<!-- Logo and new link -->
-			<div class="logo">
-				<a href="travelRecommendation.html">
-					<img src="img/TravelPlaneSmall.jpg" alt="Logo">
-				</a>
-				<a href="travelRecommendation.html" class="logo-link">TravelBloom</a>
-			</div>
+    <header>
+        <nav class="navbar">
+            <!-- Logo and new link -->
+            <div class="logo">
+                <a href="travelRecommendation.html">
+                    <img src="img/TravelPlaneSmall.jpg" alt="Logo">
+                </a>
+                <a href="travelRecommendation.html" class="logo-link">TravelBloom</a>
+            </div>
 
-			<!-- Navigation links centered -->
-			<div class="nav-links">
-				<a href="travelRecommendation.html">Home</a>
-				<a href="about.html">About Us</a>
-				<a href="contact.html">Contact Us</a>
-			</div>
+            <!-- Navigation links centered -->
+            <div class="nav-links">
+                <a href="travelRecommendation.html">Home</a>
+                <a href="about.html">About Us</a>
+                <a href="contact.html">Contact Us</a>
+            </div>
 
-			<!-- Search box on the right -->
-			<div class="search-container">
-				<input type="text" placeholder="Search..." id="searchBox">
-				<button id="searchButton">Search</button>
-				<button id="resetButton">Reset</button>
-			</div>
-		</nav>
-	</header>
+            <!-- Search box on the right -->
+            <div class="search-container">
+            </div>
+        </nav>
+    </header>
 
-	<main>
-		<!-- Logo under navbar -->
-		<div class="logo-container">
-			<img src="img/homePageBackground.jpg" alt="Background Logo" class="full-page-logo">
-		</div>
+    <main>
+        <!-- Logo under navbar -->
+        <div class="logo-container">
+            <img src="img/homePageBackground.jpg" alt="Background Logo" class="full-page-logo">
+        </div>
 
-		<!-- Social Media Icons -->
-		<div class="social-media">
-			<a href="https://twitter.com" target="_blank" class="social-icon twitter">
-				<i class="fab fa-twitter"></i>
-			</a>
-			<a href="https://facebook.com" target="_blank" class="social-icon facebook">
-				<i class="fab fa-facebook"></i>
-			</a>
-			<a href="https://instagram.com" target="_blank" class="social-icon instagram">
-				<i class="fab fa-instagram"></i>
-			</a>
-			<a href="https://youtube.com" target="_blank" class="social-icon youtube">
-				<i class="fab fa-youtube"></i>
-			</a>
-		</div>
+        <!-- Social Media Icons -->
+        <div class="social-media">
+            <a href="https://twitter.com" target="_blank" class="social-icon twitter">
+                <i class="fab fa-twitter"></i>
+            </a>
+            <a href="https://facebook.com" target="_blank" class="social-icon facebook">
+                <i class="fab fa-facebook"></i>
+            </a>
+            <a href="https://instagram.com" target="_blank" class="social-icon instagram">
+                <i class="fab fa-instagram"></i>
+            </a>
+            <a href="https://youtube.com" target="_blank" class="social-icon youtube">
+                <i class="fab fa-youtube"></i>
+            </a>
+        </div>
 
-		<!-- Explore Section -->
-		<div class="explore-section">
-			<h1>EXPLORE DREAM DESTINATION</h1>
-			<p class="description">
-				It encourages exploration of unfamiliar territories, embracing diverse cultures and landscapes, while pursuing the desired destination that captivates the heart and ignites a sense of wonder.
-			</p>
-			<div class="button-container">
-				<button class="book-now-btn">BOOK NOW</button>
-			</div>
-		</div>
-	</main>
+        <!-- Contact Us Section -->
+        <div class="contact-section">
+            <!-- Left section (Contact info or title) -->
+            <div class="left">
+                <h1>CONTACT US</h1>
+                <p class="description">
+                    If you have any questions, feel free to reach out. We are here to help!
+                </p>
+            </div>
+            
+            <!-- Right section (Form) -->
+            <div class="right">
+                <form action="#" method="post">
+                    <input type="text" placeholder="Enter your message here" required />
+                </form>
+            </div>
+        </div>
+        
+    </main>
 
-	<footer>
-		<p>Footer</p>
-	</footer>
+    <footer>
+        <p>Footer</p>
+    </footer>
 
-	<!-- Include your Javascript files here -->
-	<script src="js/scripts.js"></script>
+    <!-- Include your Javascript files here -->
+    <script src="js/scripts.js"></script>
 
 </body>
 </html>
