--- a/travelRecommendation.html
+++ b/travelRecommendation.html
@@ -48,9 +48,9 @@
 
 			<!-- Search box on the right -->
 			<div class="search-container">
-				<input type="text" placeholder="Search..." id="searchBox">			
+				<input type="text" placeholder="Search..." id="searchBox" name="searchBox">			
                 <button class="searchIconButton"><i class="fas fa-search"></i></button>
-                <button id="searchButton" class="searchButton">Search</button>
+                <button id="searchButton" class="searchButton" onClick="searchTravelRecommendation();">Search</button>
 				<button id="resetButton" class="resetButton">Reset</button>
 			</div>
 		</nav>
@@ -95,7 +95,7 @@
 	</footer>
 
 	<!-- Include your Javascript files here -->
-	<script src="js/scripts.js"></script>
+	<script src="js/travelRecommendation.js"></script>
 
 </body>
 </html>
