--- a/travelRecommendation.html
+++ b/travelRecommendation.html
@@ -80,14 +80,20 @@
 
 		<!-- Explore Section -->
 		<div class="explore-section">
-			<h1>EXPLORE DREAM DESTINATION</h1>
-			<p class="description">
-				It encourages exploration of unfamiliar territories, embracing diverse cultures and landscapes, while pursuing the desired destination that captivates the heart and ignites a sense of wonder.
-			</p>
-			<div class="button-container">
-				<button class="book-now-btn">BOOK NOW</button>
-			</div>
+            <div class="explore-myleft">
+			    <h1>EXPLORE DREAM DESTINATION</h1>
+			    <p class="description">
+				    It encourages exploration of unfamiliar territories, embracing diverse cultures and landscapes, while pursuing the desired destination that captivates the heart and ignites a sense of wonder.
+			    </p>
+			    <div class="button-container">
+				    <button class="book-now-btn">BOOK NOW</button>
+			    </div>
+            </div>
+
+            <div id="explore-myright" class="explore-myright">
+            </div>
 		</div>
+
 	</main>
 
 	<footer>
