Stable Main and About page

--- a/about.html
+++ b/about.html
@@ -71,9 +71,12 @@
             </a>
         </div>
 
-        <!-- Explore Section -->
-        <div class="explore-section">
+        <div class="aboutus-section">
             <h1>ABOUT US</h1>
+            
+            <!-- Spacer instead of "BOOK NOW" button -->
+            <div class="spacer"></div>
+            
             <p class="description">
                 Welcome to Our Company!  We are a team of passionate individuals dedicated to providing excellent services/products to our customers.  Our mission is to<br />
                 <b>provide the best experience</b> for people traveling to different destinations around the world.<br />
@@ -84,6 +87,10 @@
 
             <!-- Spacer instead of "BOOK NOW" button -->
             <div class="spacer"></div>
+        </div>
+
+        <!-- Explore Section -->
+        <div class="teams-section">
 
             <!-- Team Section -->
             <div class="team-section">
