--- a/travelRecommendation.html
+++ b/travelRecommendation.html
@@ -79,9 +79,15 @@
 		<div class="explore-section">
             <div class="explore-myleft">
 			    <h1>EXPLORE DREAM DESTINATION</h1>
+
+                <div class="spacer"></div>
+
 			    <p class="description">
 				    It encourages exploration of unfamiliar territories, embracing diverse cultures and landscapes, while pursuing the desired destination that captivates the heart and ignites a sense of wonder.
 			    </p>
+
+                <div class="spacer"></div>
+
 			    <div class="button-container">
 				    <button class="book-now-btn">BOOK NOW</button>
 			    </div>
