--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
 
 </head>
 
-<body class="homepage">
+<body class="prettybackground">
     <header>
         <nav class="navbar">
             <!-- Logo and new link -->
@@ -76,7 +76,7 @@
             
             <!-- Spacer instead of "BOOK NOW" button -->
             <div class="spacer"></div>
-            
+
             <p class="description">
                 Welcome to Our Company!  We are a team of passionate individuals dedicated to providing excellent services/products to our customers.  Our mission is to<br />
                 <b>provide the best experience</b> for people traveling to different destinations around the world.<br />
