--- a/travelRecommendation.html
+++ b/travelRecommendation.html
@@ -28,7 +28,7 @@
 
 </head>
 
-<body class="homepage">
+<body class="prettybackground">
 	<header>
 		<nav class="navbar">
 			<!-- Logo and new link -->
@@ -103,13 +103,14 @@
 		<p>Footer</p>
 	</footer>
     
-		</div>
+	</div>
 </div>
 
 	<!-- Include your Javascript files here -->
 	<script src="js/travelRecommendation.js"></script>
     <script>
         document.getElementById("searchButton").addEventListener("click", searchTravelRecommendation);
+        document.getElementById("resetButton").addEventListener("click", resetSearch);
     </script>
 
 </body>
