--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
 
 </head>
 
-<body>
+<body class="prettybackground">
     <header>
         <nav class="navbar">
             <!-- Logo and new link -->
@@ -52,11 +52,8 @@
         </nav>
     </header>
 
+    <div class="wrapper">
     <main>
-        <!-- Logo under navbar -->
-        <div class="logo-container">
-            <img src="img/homePageBackground.jpg" alt="Background Logo" class="full-page-logo">
-        </div>
 
         <!-- Social Media Icons -->
         <div class="social-media">
@@ -109,6 +106,8 @@
     <footer>
         <p>Footer</p>
     </footer>
+
+    </div>
 
     <!-- Include your Javascript files here -->
     <script src="js/scripts.js"></script>
