Updates to all the code

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Travel Recommendation</title>
+    <title>TravelBloom - About Us</title>
     <meta name="description" content="Travel Company that makes Travel Recommendations">
     <meta name="author" content="TravelBloom">
 
@@ -102,7 +102,7 @@
                         <div class="team-content">
                             <img src="img/LightBulb.jpg" alt="Icon" class="team-icon">
                             <div class="team-text">
-                                <p>John Doe<br>Responsible for...</p>
+                                <p>Lonne Osborn<br>Responsible for creating this website</p>
                                 <button class="blue-btn">CEO</button>
                             </div>
                         </div>
@@ -113,7 +113,7 @@
                         <div class="team-content">
                             <img src="img/LightBulb.jpg" alt="Icon" class="team-icon">
                             <div class="team-text">
-                                <p>Jane Smith<br>Responsible for...</p>
+                                <p>Jane Doe<br>Responsible for doing anything technical</p>
                                 <button class="blue-btn">CTO</button>
                             </div>
                         </div>
@@ -124,7 +124,7 @@
                         <div class="team-content">
                             <img src="img/LightBulb.jpg" alt="Icon" class="team-icon">
                             <div class="team-text">
-                                <p>Emily Johnson<br>Responsible for...</p>
+                                <p>John Doe<br>Responsible for obtaining capital</p>
                                 <button class="blue-btn">CFO</button>
                             </div>
                         </div>
