--- a/travelRecommendation.html
+++ b/travelRecommendation.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Travel Recommendation</title>
+	<title>TravelBloom - Travel Recommendation</title>
 	<meta name="description" content="Travel Company that makes Travel Recommendations">
 	<meta name="author" content="TravelBloom">
 
@@ -108,11 +108,11 @@
 
 	<!-- Include your Javascript files here -->
 	<script src="js/travelRecommendation.js"></script>
-    <script>
+    <script type="text/javascript">
         document.getElementById("searchButton").addEventListener("click", searchTravelRecommendation);
         document.getElementById("resetButton").addEventListener("click", resetSearch);
         document.getElementById("searchIconButton").addEventListener("click", searchTravelRecommendation);
-</script>
+    </script>
 
 </body>
 </html>
