--- a/about.html
+++ b/about.html
@@ -139,7 +139,7 @@
     </footer>
 </div>
     <!-- Include your Javascript files here -->
-    <script src="js/scripts.js"></script>
+    <!-- <script src="js/scripts.js"></script> -->
 
 </body>
 </html>
