File name changes

--- a/about.html
+++ b/about.html
@@ -33,10 +33,10 @@
         <nav class="navbar">
             <!-- Logo and new link -->
             <div class="logo">
-                <a href="travelRecommendation.html">
+                <a href="travel_recommendation.html">
                     <img src="img/TravelPlaneSmall.jpg" alt="Logo">
                 </a>
-                <a href="travelRecommendation.html" class="logo-link">TravelBloom</a>
+                <a href="travel_recommendation.html" class="logo-link">TravelBloom</a>
             </div>
 
             <!-- Navigation links centered -->
