--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -107,7 +107,7 @@
 </div>
 
 	<!-- Include your Javascript files here -->
-	<script src="js/travelRecommendation.js"></script>
+	<script src="js/travel_recommendation.js"></script>
     <script type="text/javascript">
         document.getElementById("searchButton").addEventListener("click", searchTravelRecommendation);
         document.getElementById("resetButton").addEventListener("click", resetSearch);
