More final changes

--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 
     <title>TravelBloom - Contact Us</title>
     <meta name="description" content="Travel Company that makes Travel Recommendations">
-    <meta name="author" content="TravelBloom">
+	<meta name="author" content="TravelBloom - Lonne Osborn - Coursera Javascript">
 
     <!-- Open Graph Protocol -->
     <meta property="og:title" content="TravelBloom">
