--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -33,15 +33,15 @@
 		<nav class="navbar">
 			<!-- Logo and new link -->
 			<div class="logo">
-				<a href="travelRecommendation.html">
+				<a href="travel_recommendation.html">
 					<img src="img/TravelPlaneSmall.jpg" alt="Logo">
 				</a>
-				<a href="travelRecommendation.html" class="logo-link">TravelBloom</a>
+				<a href="travel_recommendation.html" class="logo-link">TravelBloom</a>
 			</div>
 
 			<!-- Navigation links centered -->
 			<div class="nav-links">
-				<a href="travelRecommendation.html">Home</a>
+				<a href="travel_recommendation">Home</a>
 				<a href="about.html">About Us</a>
 				<a href="contact.html">Contact Us</a>
 			</div>
