Another small change

--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -41,7 +41,7 @@
 
 			<!-- Navigation links centered -->
 			<div class="nav-links">
-				<a href="travel_recommendation">Home</a>
+				<a href="travel_recommendation.html">Home</a>
 				<a href="about.html">About Us</a>
 				<a href="contact.html">Contact Us</a>
 			</div>
